--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
 <head>
+   <meta content="Jarvis" property="og:title">
+    <meta content="Join the server for Jarvis, the best kah script" property="og:description">
+    <meta content="https://i.postimg.cc/VvHRWHSt/New-Project-1.png" property="og:image">
+    <meta content="#000080" data-react-helmet="true" name="theme-color">
   <title>Jarvis</title>
 </head>
 <body>
